syntax = "proto3";

option go_package = "./proto";

package calculator;

service Calculator {
    rpc Add(AddRequest) returns (AddResponse);
    rpc Subtract(SubtractRequest) returns (SubtractResponse);
    rpc Multiply(MultiplyRequest) returns (MultiplyResponse);
    rpc Divide(DivideRequest) returns (DivideResponse);
}

message AddRequest {
    double num1 = 1;
    double num2 = 2;
}

message AddResponse {
    double result = 1;
}

message SubtractRequest {
    double num1 = 1;
    double num2 = 2;
}

message SubtractResponse {
    double result = 1;
}

message MultiplyRequest {
    double num1 = 1;
    double num2 = 2;
}

message MultiplyResponse {
    double result = 1;
}

message DivideRequest {
    double num1 = 1;
    double num2 = 2;
}

message DivideResponse {
    double result = 1;
}
